# raytracer

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
doc/: Makefile.am  experiences  links  optimizing.txt  papers.txt  performance.txt
etc/banna/: colors.inc  finish.inc  textures.inc
src/: Makefile.am  aabb.h  banna.cpp  barycentric.cpp  barycentric.h  box.cpp  box.h  bpmath.h  camera.h  canvas.cpp  canvas.h  chunkmem.h  color.h  common.h  float.h  grid.h  io.cpp  io.h  jobmanager.cpp  jobmanager.h  kdnode.h  kdtree.cpp  kdtree.h  kdtreebuilder.cpp  kdtreebuilder.h  kdtreebundletraversalbenthin.cpp  kdtreetraversal.cpp  kdtreetraversalbenthin.cpp  kdtreetraversalwachter.cpp  lexer.h  lexer.ll  mailbox.h  noaccel.h  parser.cpp  parser.h  platform.h  ply2mesh.py  ray.h  renderer.h  renderer.inl.cpp  (+16 more)
src/simd/: simd.h  ssed.h  ssef.h  ssei.h
